# codexus

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/codexus-core/: Cargo.toml
crates/codexus-core/src/: automation.rs  lib.rs  test_fixtures.rs
crates/codexus-core/src/adapters/web/: adapter.rs  handlers.rs  mod.rs  service.rs  state.rs  types.rs  wire.rs
crates/codexus-core/src/appserver/: mod.rs
crates/codexus-core/src/appserver/tests/: contract.rs  mod.rs  server_requests.rs  validated_calls.rs
crates/codexus-core/src/domain/artifact/: adapter.rs  execution.rs  lock_policy.rs  mod.rs  models.rs  store.rs  tests.rs
crates/codexus-core/src/ergonomic/: config.rs  mod.rs  oneshot.rs  paths.rs  workflow.rs
crates/codexus-core/src/ergonomic/tests/: common.rs  mod.rs  real_server.rs  unit.rs
crates/codexus-core/src/plugin/: mod.rs
crates/codexus-core/src/plugin/tests/: contract_version.rs  hook_matcher.rs  hook_report.rs  mod.rs
crates/codexus-core/src/protocol/: mod.rs  tests.rs
crates/codexus-core/src/runtime/: approvals.rs  detached_task.rs  errors.rs  events.rs  hooks.rs  id.rs  metrics.rs  mod.rs  rpc.rs  rpc_contract.rs  runtime_validation.rs  shell_hook.rs  sink.rs  state.rs  transport.rs  turn_lifecycle.rs  turn_output.rs
crates/codexus-core/src/runtime/api/: attachment_validation.rs  command_exec_api.rs  feature_api.rs  flow.rs  fs_api.rs  mod.rs  models.rs  prompt_run.rs  thread_api.rs  tool_use_hooks.rs  turn_error.rs  types.rs  wire.rs
crates/codexus-core/src/runtime/client/: compat_guard.rs  config.rs  mod.rs  profile.rs  session.rs  (+1 more)
(+48 files in other folders)
