[workspace]
members = [
  "crates/codexus-core",
  "tools/xtask"
]
default-members = ["crates/codexus-core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "process", "io-util", "fs"] }
arc-swap = "1"
